--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -251,6 +251,7 @@
     <string name="checkOffersFromDriver">Посмотрите предложения водителей</string>
     <string name="selectBestOffer">Выберите лучшее предложение</string>
     <string name="newMessage">Новое сообщение</string>
+    <string name="newNotif">Новое уведомление</string>
     <string name="activeRide">Активная поездка</string>
     <string name="select_card">Выбрать карту</string>
     <string name="pinCard">Прикрепите карту</string>
